# clang-modules-example

./: CMakeLists.txt  README.md
src/: hello.cppm  main.cpp
